<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_textView">Droid Desserts</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a Donut.</string>
    <string name="ice_cream_order_message">You ordered an Ice Cream Sandwich.</string>
    <string name="froyo_oder_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter Your Name</string>
    <string name="address_label_text">Address</string>
    <string name="address_text_hint">Enter Your Address</string>
    <string name="phone_label_text">Phone</string>
    <string name="phone_text_hint">Enter Phone Number</string>
    <string name="note_label">Note</string>
    <string name="note_text_hint">Enter Any Notes</string>
    <string name="choose_delivery_method">Choose A Delivery Method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_messenger_service">Next day messenger service</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="account_header">Account</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
</resources>
